Week 3 Team Activity and Project 2 Part 1 (Before adding validation and error handling)
