# contacts-project/controllers/contacts.js
@@ -5,25 +5,38 @@ const ObjectId = require("mongodb").ObjectId;
 const getAll = async (req, res) => {
   //#swagger.tags=["Contacts"]
   const result = await mongodb.getDatabase().db().collection("contacts").find();
-  result.toArray().then((contacts) => {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json(contacts);
-  });
+  result
+    .toArray()
+    .then((contacts) => {
+      res.setHeader("Content-Type", "application/json");
+      res.status(200).json(contacts);
+    })
+    .catch((error) => {
+      res.status(400).json({ message: error });
+    });
 };
 
 // Get a single contact from database by contact ID
 const getSingle = async (req, res) => {
   //#swagger.tags=["Contacts"]
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json("Must use a valid contact ID to find a contact.");
+  }
   const contactId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDatabase()
     .db()
     .collection("contacts")
     .find({ _id: contactId });
-  result.toArray().then((contacts) => {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json(contacts[0]);
-  });
+  result
+    .toArray()
+    .then((contacts) => {
+      res.setHeader("Content-Type", "application/json");
+      res.status(200).json(contacts[0]);
+    })
+    .catch((error) => {
+      res.status(400).json({ message: error });
+    });
 };
 
 // Create a new contact
@@ -53,6 +66,9 @@ const createContact = async (req, res) => {
 // Modify an existing contact
 const modifyContact = async (req, res) => {
   //#swagger.tags=["Contacts"]
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json("Must use a valid contact ID to modify a contact.");
+  }
   const contactId = new ObjectId(req.params.id);
   const contact = {
     firstName: req.body.firstName,
@@ -78,6 +94,9 @@ const modifyContact = async (req, res) => {
 // Delete an existing contact
 const deleteContact = async (req, res) => {
   //#swagger.tags=["Contacts"]
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json("Must use a valid contact ID to delete a contact.");
+  }
   const contactId = new ObjectId(req.params.id);
   const response = await mongodb
     .getDatabase()
